# obsidian-markdown-comment-to-frontmatter

./: .editorconfig  .pre-commit-config.yaml  README.md  app.py  md_to_yaml_parser.py  pyproject.toml  test_app.py  test_md_to_yaml_parser.py
.hooks/: pre-push
hooks/: pre-commit  pre-push
