[tool.poetry]
name = "obsidian-markdown-comment-to-frontmatter"
version = "0.1.0"
description = ""
authors = ["Marc Solà Nadal <mail@marcsolanadal.com>"]
readme = "README.md"
packages = [{include = "obsidian_markdown_comment_to_frontmatter"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
commitizen = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
